--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,10 @@ HOST=0.0.0.0
 NODE_ENV=development
 APP_KEY=6TWEy3prdDirASjh3fASVO9FpleHt9Se
 DRIVE_DISK=local
+
+DB_CONNECTION=mysql
+MYSQL_HOST=localhost
+MYSQL_PORT=3306
+MYSQL_USER=lucid
+MYSQL_PASSWORD=
+MYSQL_DB_NAME=lucid
