--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "dependencies": {
     "@adonisjs/core": "^5.4.2",
     "@adonisjs/lucid": "^16.3.2",
+    "@adonisjs/redis": "^7.1.1",
     "@adonisjs/repl": "^3.1.8",
     "luxon": "^2.3.0",
     "mysql": "^2.18.1",
