--- a/.env.example
+++ b/.env.example
@@ -10,3 +10,8 @@ MYSQL_PORT=3306
 MYSQL_USER=lucid
 MYSQL_PASSWORD=
 MYSQL_DB_NAME=lucid
+
+REDIS_CONNECTION=local
+REDIS_HOST=127.0.0.1
+REDIS_PORT=6379
+REDIS_PASSWORD=
