--- a/package.json
+++ b/package.json
@@ -6,25 +6,30 @@
     "dev": "node ace serve --watch",
     "build": "node ace build --production",
     "start": "node server.js",
-    "lint": "eslint . --ext=.ts",
-    "format": "prettier --write ."
+    "lint": "eslint . --ext=.ts --fix",
+    "format": "prettier --write .",
+    "precommit-msg": "echo 'Pre-commit checks...' && exit 0",
+    "prepare": "husky install"
   },
   "devDependencies": {
     "@adonisjs/assembler": "^5.4.1",
     "adonis-preset-ts": "^2.1.0",
-    "eslint": "^8.9.0",
-    "eslint-config-prettier": "^8.3.0",
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-adonis": "^2.1.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
+    "lint-staged": "^12.3.5",
     "pino-pretty": "^7.5.1",
     "prettier": "^2.5.1",
-    "typescript": "~4.5",
+    "typescript": "^4.6.2",
     "youch": "^3.1.0",
     "youch-terminal": "^2.1.2"
   },
   "dependencies": {
-    "@adonisjs/core": "^5.4.2",
-    "@adonisjs/lucid": "^16.3.2",
+    "@adonisjs/auth": "^8.0.12",
+    "@adonisjs/core": "^5.5.3",
+    "@adonisjs/lucid": "^17.1.0",
     "@adonisjs/redis": "^7.1.1",
     "@adonisjs/repl": "^3.1.8",
     "luxon": "^2.3.0",
@@ -33,5 +38,8 @@
     "proxy-addr": "^2.0.7",
     "reflect-metadata": "^0.1.13",
     "source-map-support": "^0.5.21"
+  },
+  "lint-staged": {
+    "*.ts": "eslint --cache --fix"
   }
 }
