--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "@adonisjs/auth": "^8.0.12",
     "@adonisjs/core": "^5.5.3",
+    "@adonisjs/i18n": "^1.5.4",
     "@adonisjs/lucid": "^17.1.0",
     "@adonisjs/redis": "^7.1.1",
     "@adonisjs/repl": "^3.1.8",
