--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@adonisjs/auth": "^8.0.12",
+    "@adonisjs/bouncer": "^2.2.6",
     "@adonisjs/core": "^5.5.3",
     "@adonisjs/i18n": "^1.5.4",
     "@adonisjs/lucid": "^17.1.0",
